# Public_Prevision

./: .gitignore  ADAPTACAO_METODOLOGICA.md  ANALISE_METODOLOGICA.md  Procedimentos Metodologicos.md  README.md  pyproject.toml  requirements.txt  trabalho.md  trabalho_OLD.md
app/: main.py  test_omdb.py
app/api/: consult.py  consult_omdb.py  consult_tmdb.py
app/api/schema/: omdb_schema.py  tmdb_schema.py
app/db/models/: db_model.py
app/db/schema/: db_schema.py
app/pipeline/: extract.py  load.py  transform.py
app/prediction/: linear_regressor.py  linear_regressor_ANTIGO.py  linear_regressor_OLD.py  main.py  random_forest_regressor.py  regressor_linear_plots.py  simulacao_cenarios.py  statistics_analysis.py  transform.py
data/output/: complete_database.parquet
tests/: test_database_create.py
